--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,19 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/gradient_background"
+    android:padding="@dimen/nav_header_vertical_spacing">
 
-    <TextView
-        android:id="@+id/text_home"
-        android:layout_width="match_parent"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5"/>
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/userGreetings"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        style="@style/TextAppearance.MaterialComponents.Headline4.ScreenTitle"
+        tools:text="Hi, user"/>
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/userMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/userGreetings"
+        app:layout_constraintStart_toStartOf="parent"
+        android:paddingBottom="@dimen/nav_header_vertical_spacing"
+        tools:text="What would you like to work with?"
+        style="@style/TextAppearance.MaterialComponents.Body2"/>
+
+    <include android:id="@+id/walletCard" layout="@layout/wallet_card" />
+
+    <include android:id="@+id/exchangeCard" layout="@layout/exchange_card" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/currencyOverview"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/exchangeCard"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        tools:listitem="@layout/item_currency_overview"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
